# cis198-2016s-homework

./: README.md
hw00/: Cargo.toml
hw01/: Cargo.toml
hw01/src/: problem1.rs  problem2.rs  problem3.rs  problem4.rs
hw01/tests/: tests.rs  tests_provided.rs
hw02/: Cargo.toml
hw02/src/: first.rs
hw02/tests/: tests.rs
hw03/: Cargo.toml
hw03/src/: second.rs
hw03/tests/: tests.rs
hw04/: Cargo.toml
hw04/src/: main.rs  parser.rs  rpn.rs
hw05/src/: ui.rs
hw05/src/game/: board.rs  hall.rs  player.rs  room.rs
hw06/: Cargo.toml
hw06/html/: header.html
hw06/src/: lib.rs
hw07/: Cargo.toml
hw07/src/: chat_server.rs  main.rs  utils.rs  webpage_server.rs
